# goldZenith

./: .env.example  .gitignore  Taskfile.yml  docker-compose.yml  main.py  orderbook_dashboard.py  orderbook_multi.py  orderbook_terminal.py  pyproject.toml
docs/: llm_instructions_count_vs_volume.md
scripts/: broker_signalr_stream.py  broker_stream.py  cancel_order.py  create_order.py  fetch_day.py  fetch_range.py  get_orders.py  historical_dataset_analysis.ipynb  load_parquet.py  mid_prices.py  orderbook_dashboard.py  orderbook_stream_logger.py  read_historical_dataset.py  replay.py  run_arb_detector.py  run_arb_engine.py  run_feed.py  run_persister.py  show_parquet.py  tick_level_dataset_analysis.ipynb  verify_range.py
src/api/: __init__.py  app.py
src/broker/: __init__.py  base_streamer.py  factory.py  registry.py
src/broker/nibi/: __init__.py  adapter.py  client.py  mock_streamer.py  schema.py  streamer.py
src/broker/pasargad/: __init__.py  adapter.py  mock_streamer.py  streamer.py
src/broker_stream/: __init__.py
src/broker_stream/pasargad/: __init__.py  base.py  mock_streamer.py  streamer.py
src/consumers/: __init__.py  arb_detector.py  execution_engine.py  persister.py
src/feed/: __init__.py  feed.py
src/historical/: __init__.py  analysis.py  client.py  orderbook.py  schema.py  storage.py  streamer.py
src/historical_orderbook/: __init__.py  analysis.py  dashboard.py  fetch.py  renderer.py  snapshots.py
src/instruments/: __init__.py  registry.py
src/orderbook_api/: __init__.py  app.py
src/orderbook_preview/: __init__.py  dashboard.py  formatting.py  renderer.py
src/redis_manager/: __init__.py  manager.py
src/settings/: __init__.py
src/storage/: __init__.py  client.py
src/tsetmc_orderbook/: __init__.py  api.py  dashboard.py  fetch.py  formatting.py  multi_player.py  player.py  renderer.py  snapshots.py
static/: index.html
