[project]
name = "goldzenith"
version = "0.1.0"
description = "TSETMC orderbook reconstruction, terminal replay, and HTTP API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "finpy-tse>=1.2.10",
    "jdatetime>=5.2.0",
    "pandas>=3.0.2",
    "plotly>=5.24",
    "pyarrow>=18.0",
    "pydantic-settings>=2.14.0",
    "pyyaml>=6.0",
    "redis>=5.0",
    "requests>=2.33.1",
    "signalrcore==0.9.5",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/settings", "src/historical", "src/orderbook_preview", "src/api", "src/broker", "src/redis_manager", "src/instruments", "src/feed"]
